--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ readme = "README.md"
 python = "^3.12"
 Django = "^5.1.1"
 pillow = "^10.4.0"
+gunicorn = "^23.0.0"
+drf-yasg = "^1.21.7"
+setuptools = "^75.1.0"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
