--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ pillow = "^10.4.0"
 gunicorn = "^23.0.0"
 drf-yasg = "^1.21.7"
 setuptools = "^75.1.0"
-python-dotenv = "^1.0.1"
+django-environ = "^0.11.2"
 
 
 [build-system]
