--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ setuptools = "^75.1.0"
 django-environ = "^0.11.2"
 django-extensions = "^3.2.3"
 django-browser-reload = "^1.15.0"
+djangorestframework = "^3.15.2"
 
 
 [build-system]
