--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ django-environ = "^0.11.2"
 django-extensions = "^3.2.3"
 django-browser-reload = "^1.15.0"
 djangorestframework = "^3.15.2"
+djangorestframework-simplejwt = "^5.3.1"
+
 
 
 [build-system]
